--- a/src/Biblioteca/TegBundle/Resources/views/teg/new.html.twig
+++ b/src/Biblioteca/TegBundle/Resources/views/teg/new.html.twig
@@ -34,7 +34,6 @@
             <div class="form-group">
                 {{ form_label(form.authors) }}
                 <div id="form-autor" class="col-xs-9">
-
                     <ul id="autor-fields-list" class="list-unstyled" ng-init="{% for i in form.authors %}addA('{{ i.vars.value}}');{% endfor %}">
                         <li>
                             {{ form_widget(form.authors[0].name) }}
@@ -42,7 +41,7 @@
                             {{ form_errors(form.authors[0]) }}
                         </li>
 
-                        <label>Segundo autor (Opcional): <input type="checkbox" ng-model="segundoA" ng-init="segundoA={% if form.autores[1] is defined %}true{% endif %}" /></label><br/>
+                        <label>Segundo autor (Opcional): <input type="checkbox" ng-model="segundoA" ng-init="segundoA={% if form.authors[1] is defined %}true{% endif %}" /></label><br/>
                        
                         <li ng-if="segundoA" >
                             {{ form_widget(form.authors[1].name) }}
@@ -62,7 +61,7 @@
                             {{ form_widget(form.tuthors[0].lastname) }}
                             {{ form_errors(form.tuthors[0]) }}
                         </li>
-                        <label>Segundo tutor (Opcional): <input type="checkbox" ng-model="segundoT" ng-init="segundoT={% if form.tutores[1] is defined %}true{% endif %}" /></label><br/>
+                        <label>Segundo tutor (Opcional): <input type="checkbox" ng-model="segundoT" ng-init="segundoT={% if form.tuthors[1] is defined %}true{% endif %}" /></label><br/>
                        
                         <li ng-if="segundoT" >
                             {{ form_widget(form.tuthors[1].name) }}
@@ -87,7 +86,7 @@
 
                 <div class="col-xs-9" ng-init="{% for i in form.keyWords %}add('{{ i.vars.value}}');{% endfor %}">
                     <div ng-repeat="item in wordkeys track by $index" class="input-group col-md-2 col-xs-12" style="float: left;margin-right: 5px;">
-                        <input type="text" name="[['biblioteca_tegbundle_teg[keyWords]['+$index+']']]" value="[[item]]:[[$index]]" required="required" class="form-control"/>
+                        <input type="text" name="[['biblioteca_tegbundle_teg[keyWords]['+$index+'][keyWord]']]" value="[[item]]:[[$index]]" required="required" class="form-control"/>
                         <span class="input-group-btn">
                             <button type="button" class="close" ng-click="remove($index)"><span aria-hidden="true">&times;</span></button>
                           </span>
