Show y Persist de nuevas entidades

--- a/src/Biblioteca/TegBundle/Resources/views/teg/show.html.twig
+++ b/src/Biblioteca/TegBundle/Resources/views/teg/show.html.twig
@@ -41,11 +41,11 @@
             <div class="form-group">
                 <label class="col-sm-3 col-xs-6 col-md-2 control-label">Autor(es)</label> 
                 <div class="col-xs-9 col-md-4">
-                    <p class="form-control-static">{% for iField in entity.autores %} {{ iField }}, {% endfor %}</p>
+                    <p class="form-control-static">{% for iField in entity.authors %} {{ iField }}, {% endfor %}</p>
                 </div>
                 <label class="col-sm-3 col-xs-6 col-md-2 control-label">Tutor(es)</label> 
                 <div class="col-xs-9 col-md-4">
-                    <p class="form-control-static">{% for iField in entity.tutores %} {{ iField }}, {% endfor %}</p>
+                    <p class="form-control-static">{% for iField in entity.tuthors %} {{ iField }}, {% endfor %}</p>
                 </div>
             </div>
             <div class="form-group">
@@ -63,7 +63,7 @@
             <div class="form-group">
                 <label class="col-sm-3 col-xs-6 col-md-2 control-label">Palabras Clave</label> 
                 <div class="col-xs-9">
-                    <p class="form-control-static">{% for iField in entity.palabrasclave %} {{ iField }}, {% endfor %}</p>
+                    <p class="form-control-static">{% for iField in entity.keyWords %} {{ iField }}, {% endfor %}</p>
                 </div>
             </div>
             <div class="form-group">
