--- a/src/Biblioteca/TegBundle/Resources/views/teg/index.html.twig
+++ b/src/Biblioteca/TegBundle/Resources/views/teg/index.html.twig
@@ -1,26 +1,30 @@
 {% extends '::base.html.twig' %}
 {% block body %}
 {% if form is defined %}
-{{ form_start(form) }}
-    {{ form_errors(form) }}
-    <div class="row">
-        <div class="col-md-6 col-xs-12" style="margin-bottom: 10px;">
-            {{ form_widget(form.q) }}
-            {{ form_widget(form.submit) }}
-        </div>
-        <div class="col-md-6 col-xs-12">
 
-            <label class="form-control-static">Filtros</label><span class="separator">|</span>
-            <label class="form-control-static">Desde</label>
-            {{ form_widget(form.desde) }}<span class="separator">|</span>
-            <label class="form-control-static">Hasta</label>
-            {{ form_widget(form.hasta) }}<span class="separator">|</span>
-            {{ form_widget(form.escuela) }}
+<div ng-controller="searchTegController">
+    {{ form_start(form) }}
+        {{ form_errors(form) }}
+        <span ng-show="valid()">Seleccione uno filtro ó ingrese palabra o frase</span>
+        <div class="row">
+            <div class="col-md-6 col-xs-12" style="margin-bottom: 10px;" ng-init="q='{{form.q.vars.value}}';">
+                {{ form_widget(form.q, { 'attr': {'ng-model': 'q','ng-required': 'valid()'} }) }}
+                {{ form_widget(form.submit, { 'attr': {'ng-disabled': 'valid()'} }) }}
+            </div>
+            <div class="col-md-6 col-xs-12" ng-init="desde='{{form.desde.vars.value}}';hasta='{{form.hasta.vars.value}}';escuela='{{form.escuela.vars.value}}';">
+
+                <label class="form-control-static">Filtros</label><span class="separator">|</span>
+                <label class="form-control-static">Desde</label>
+                {{ form_widget(form.desde, { 'attr': {'ng-model': 'desde' } }) }}<span class="separator">|</span>
+                <label class="form-control-static">Hasta</label>
+                {{ form_widget(form.hasta, { 'attr': {'ng-model': 'hasta' } }) }}<span class="separator">|</span>
+                {{ form_widget(form.escuela, { 'attr': {'ng-model': 'escuela' } }) }}
+            </div>
+            {{ form_widget(form._token) }}
         </div>
-        {{ form_widget(form._token) }}
-    </div>
-{{ form_rest(form) }}
-{{ form_end(form, {'render_rest': false}) }}
+    {{ form_rest(form) }}
+    {{ form_end(form, {'render_rest': false}) }}
+</div>
 {% endif %} 
 
     <h5>{{ entities | length }} de {{ pagination.getTotalItemCount }} disponibles</h5>
@@ -61,3 +65,9 @@
 </div>
 
     {% endblock %}
+{% block javascripts %}
+    {{ parent() }}
+
+    <script src="{{ asset('js/tegController.js') }}" type="text/javascript"></script>
+
+{% endblock %}
