--- a/web/css/style.css
+++ b/web/css/style.css
@@ -67,7 +67,7 @@ body { padding-top: 70px; }
     }
 .searchform select {
     height: 25px;
-    background: rgba(38,114,224,0.5);
+    /*background: rgba(38,114,224,0.5);*/
 }
 .searchform button, select {
     position: relative;
@@ -90,118 +90,7 @@ textarea.form-control{
     min-height:100px;
 }
 
-.button {
-    font-weight: 400;        
-    display: inline-block;
-    white-space: nowrap;
-    background-color: #ccc;
-    background-image: linear-gradient(top, #eee, #ccc);
-    filter: progid:DXImageTransform.Microsoft.gradient(startColorStr='#eeeeee', EndColorStr='#cccccc');
-    border: 1px solid #777;
-    padding: 0 1.5em;
-    margin: 0.5em;
-    font: 1em/2em Arial, Helvetica;
-    text-decoration: none;
-    color: #333;
-    text-shadow: 0 1px 0 rgba(255,255,255,.8);
-    border-radius: 4px;
-    /*box-shadow: 0 0 1px 1px rgba(255,255,255,.8) inset, 0 1px 0 rgba(0,0,0,.3);*/
-}
-
-.button:hover {
-    background-color: #ddd;        
-    background-image: linear-gradient(top, #fafafa, #ddd);
-    filter: progid:DXImageTransform.Microsoft.gradient(startColorStr='#fafafa', EndColorStr='#dddddd');
-    color: #333;
-    text-decoration: none;
-}
-
-.button:active {
-    box-shadow: 0 0 4px 2px rgba(0,0,0,.3) inset;
-    position: relative;
-    top: 1px;
-}
-
-.button:focus {
-    outline: 0;
-    background: #fafafa;
-}    
-
-.button:before {
-    background: #ccc;
-    background: rgba(0,0,0,.1);
-    float: left;        
-    width: 1em;
-    text-align: center;
-    font-size: 1.5em;
-    margin: 0 1em 0 -1em;
-    padding: 0 .2em;
-    box-shadow: 1px 0 0 rgba(0,0,0,.5), 2px 0 0 rgba(255,255,255,.5);
-    border-radius: .15em 0 0 .15em;
-    pointer-events: none;        
-}
-
-/* Hexadecimal entities for the icons */
-
-.add:before {
-    content: "\271A";
-}
-
-.edit:before {
-    content: "\270E";        
-}
-
-.delete:before {
-    content: "\2718";        
-}
-
-.save:before {
-    content: "\2714";        
-}
-
-.email:before {
-    content: "\2709";        
-}
-
-.like:before {
-    content: "\2764";        
-}
-
-.next:before {
-    content: "\279C";
-}
-
-.star:before {
-    content: "\2605";
-}
-
-.spark:before {
-    content: "\2737";
-}
-
-.play:before {
-    content: "\25B6";
-}
-/*#vista-previa {
-max-width: 712px;}
-#vista-previa h3{
-    position: relative;
-    font-weight: normal;
-    font-size: 17px;
-    line-height: 19px;
-
-}
-
-.section-box h3 a:visited {
-    color: #660099;
-    text-decoration: none;
-}.section-box h3 a:link {
-    color: #1a0dab;
-}
-*/
-.section-box h3 { margin-top:0px;}
-.section-box h3 a { font-size:20px; }
-
+.searchform button:disabled { background: rgba(38,114,224,0.5); cursor: not-allowed;color: rgba(160, 160, 160, 0.5)}
 
 .separator { padding-right:5px;padding-left:5px; }
 .section-box hr {margin-top: 0;margin-bottom: 5px;border: 0;border-top: 1px solid rgb(199, 199, 199);}
