--- a/web/css/style.css
+++ b/web/css/style.css
@@ -48,7 +48,7 @@ body { padding-top: 70px; }
 #resumen p {
     font-size: 15px;font-size: 1.5rem;
 }
-.searchform #search_q{width: 86%;height:20px;padding: 5px;float: left;border: 0;background: #eee;border-radius: 3px 0 0 3px;box-shadow: 0 1px 1px rgba(0,0,0,.4) inset;box-sizing: initial;-webkit-box-sizing: initial;font: 16px arial,sans-serif;}
+.searchform #search_q{width: 80%;height:20px;padding: 5px;float: left;border: 0;background: #eee;border-radius: 3px 0 0 3px;box-shadow: 0 1px 1px rgba(0,0,0,.4) inset;box-sizing: initial;-webkit-box-sizing: initial;font: 16px arial,sans-serif;}
 .searchform #search_q:focus {
     outline: 0;
     background: #fff;
@@ -60,7 +60,7 @@ body { padding-top: 70px; }
     box-sizing: initial;
 }    
 .searchform #search_submit {
-    width: 12%;
+    /*width: 12%;*/
     color: #fff;
     background: #438cdb;
     height: 30px;
