mensaje de ayuda para searchForm

--- a/src/Biblioteca/TegBundle/Resources/views/teg/index.html.twig
+++ b/src/Biblioteca/TegBundle/Resources/views/teg/index.html.twig
@@ -10,7 +10,7 @@
 <div ng-controller="searchTegController">
     {{ form_start(form) }}
         {{ form_errors(form) }}
-        <span ng-show="valid()">Seleccione uno filtro ó ingrese palabra o frase</span>
+        <span ng-show="isInvalid()">Seleccione uno filtro ó ingrese palabra o frase</span>
         <div class="row">
             <div class="col-md-6 col-xs-12" style="margin-bottom: 10px;" ng-init="q='{{form.q.vars.value}}';">
                 {{ form_widget(form.q) }}
