--- a/src/Biblioteca/TegBundle/Resources/views/Default/index.html.twig
+++ b/src/Biblioteca/TegBundle/Resources/views/Default/index.html.twig
@@ -1,4 +1,8 @@
 {% extends '::base.html.twig' %}
+{% form_theme form _self %}
+{% block submit_widget %}
+        <input type="submit" id="search_submit" name="search[submit]" {{ block('attributes') }} value="{{ value }}" name="{{ name }}" />
+{% endblock %}
 
 {% block body %}
 <div id="home" ng-controller="searchTegController">
@@ -9,7 +13,7 @@
             <div class="col-xs-12">
                 {{ form_widget(form.q) }}
                 {{ form_widget(form.submit) }}
-            </div>[[submit]]
+            </div>
             {{ form_widget(form._token) }}
         </div>
     {{ form_end(form, {'render_rest': false}) }}
