--- a/src/Biblioteca/TegBundle/Resources/views/teg/new.html.twig
+++ b/src/Biblioteca/TegBundle/Resources/views/teg/new.html.twig
@@ -91,8 +91,8 @@
                             <button type="button" class="close" ng-click="remove($index)"><span aria-hidden="true">&times;</span></button>
                           </span>
                     </div>
-                    <div class="fomr-compacto input-group col-md-2 col-xs-12">
-                        <input placeholder="Nueva palabra..." class="form-control" ng-model="newWordkey" type="text" ng-enter="add(newWordkey)" value=""></input>
+                    <div class="form-compacto input-group col-md-2 col-xs-12">
+                        <input placeholder="Nueva palabra..." class="form-control" ng-model="newWordkey" type="text" ng-enter="add(newWordkey)" value="" style="width: initial;"></input>
                         <span class="input-group-btn">
                             <button ng-click="add(newWordkey)" class="btn btn-success" type="button"><span class="glyphicon glyphicon-plus-sign"></span></button>
                         </span>
@@ -104,7 +104,7 @@
                 {{ form_errors(form.publicacion) }}
                 
                 {% for Field in form.publicacion %}
-                    <div class="col-md-2" ng-init="{{Field.vars.id}}='{{Field.vars.value}}';">
+                    <div class="col-md-2 col-xs-3" ng-init="{{Field.vars.id}}='{{Field.vars.value}}';">
                         {{ form_errors(Field) }}
                         {{ form_widget(Field, { 'attr': {'class': 'form-control form-compacto', 'ng-model':(Field.vars.id)} }) }}
                     </div>
@@ -142,7 +142,7 @@
                 <div class="col-lg-2 col-md-3 col-xs-12" ng-init="initCota('{{form.cota.vars.value}}');">
                     <div class="input-group">
                         <span class="input-group-addon">[[cota_school]]</span>
-                        <input type="number" string-to-number min="1" max="99" placeholder="Indice" ng-model="cota_index" required="required" class="form-control form-compacto">
+                        <input type="number" string-to-number min="1" max="99" placeholder="Indice" ng-model="cota_index" required="required" class="form-control" style="width: initial;">
                         <span id="cota_year" class="input-group-addon">/[[cota_year]]</span>
                     </div>
                 </div>
