--- a/web/css/style.css
+++ b/web/css/style.css
@@ -83,9 +83,11 @@ body { padding-top: 70px; }
 .searchform #search_submit:focus:before{border-right-color: #2672e0;}    
 
 .reciente p {max-height: 6rem;overflow: hidden;}.reciente p:after {content:'...';position: absolute;top: 6.5rem;right: 15px;}.reciente {border-width: medium; border: 1px solid rgba(150,150,150,0.3137254901960784); padding: 20px 25px 30px; border-radius: 2px; box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);}
-.form-compacto, .input-group .form-control{
+/*.form-compacto .input-group .form-control {
 width: initial;
 }
+.form-compacto select
+{width: 100%;}*/
 textarea.form-control{
     min-height:100px;
 }
@@ -95,3 +97,7 @@ textarea.form-control{
 .separator { padding-right:5px;padding-left:5px; }
 .section-box hr {margin-top: 0;margin-bottom: 5px;border: 0;border-top: 1px solid rgb(199, 199, 199);}
 
+.oculto {
+  border-color: #a94442;
+  background-color: #f2dede;   
+}
