--- a/web/css/style.css
+++ b/web/css/style.css
@@ -48,26 +48,26 @@ body { padding-top: 70px; }
 #resumen p {
     font-size: 15px;font-size: 1.5rem;
 }
-.searchform #search_q{width: 80%;height:20px;padding: 5px;float: left;border: 0;background: #eee;border-radius: 3px 0 0 3px;box-shadow: 0 1px 1px rgba(0,0,0,.4) inset;box-sizing: initial;-webkit-box-sizing: initial;font: 16px arial,sans-serif;}
+/*.searchform #search_q{width: 80%;height:20px;padding: 5px;float: left;border: 0;background: #eee;border-radius: 3px 0 0 3px;box-shadow: 0 1px 1px rgba(0,0,0,.4) inset;box-sizing: initial;-webkit-box-sizing: initial;font: 16px arial,sans-serif;}*/
 .searchform #search_q:focus {
     outline: 0;
     background: #fff;
     box-shadow: 0 0 2px rgba(0,0,0,.8) inset;}
-#search_q:-webkit-input-placeholder, input:-moz-placeholder,input:-ms-input-placeholder {
+/*#search_q:-webkit-input-placeholder, input:-moz-placeholder,input:-ms-input-placeholder {
     color: #999;
     font-weight: normal;
     font-style: italic;
-    box-sizing: initial;
+    box-sizing: initial;*/
 }    
 .searchform #search_submit {
     /*width: 12%;*/
     color: #fff;
     background: #438cdb;
-    height: 30px;
+    /*height: 30px;*/
     }
-.searchform select {
+/*.searchform select {
     height: 25px;
-    /*background: rgba(38,114,224,0.5);*/
+    background: rgba(38,114,224,0.5);
 }
 .searchform #search_submit, select {
     position: relative;
@@ -75,7 +75,7 @@ body { padding-top: 70px; }
     cursor: pointer;    
     font-size:15px;    
     border-radius: 0 3px 3px 0;
-    text-shadow: 0 -1px 0 rgba(0, 0 ,0, .3);}
+    text-shadow: 0 -1px 0 rgba(0, 0 ,0, .3);}*/
 .searchform #search_submit:hover, .searchform select:hover{color: #fff;background: #2672e0;}	
 .searchform #search_submit:active,.searchform #search_submit:focus{background: #2672e0;}
 .searchform #search_submit:before { /* flecha */content: '';position: absolute;border-width: 8px 8px 8px 0;border-style: solid solid solid none;border-color: transparent #438cdb transparent;top: 8px;left: -5px;}
@@ -92,7 +92,7 @@ textarea.form-control{
     min-height:100px;
 }
 
-.searchform #search_submit:disabled { background: rgba(38,114,224,0.5); cursor: not-allowed;color: rgba(160, 160, 160, 0.5)}
+.searchform #search_submit:disabled { background: rgba(38,114,224,0.5); cursor: not-allowed;}
 
 .separator { padding-right:5px;padding-left:5px; }
 .section-box hr {margin-top: 0;margin-bottom: 5px;border: 0;border-top: 1px solid rgb(199, 199, 199);}
