--- a/src/Biblioteca/TegBundle/Resources/views/teg/index.html.twig
+++ b/src/Biblioteca/TegBundle/Resources/views/teg/index.html.twig
@@ -16,7 +16,7 @@
             </div>
             <div class="col-sm-3 col-xs-5" ng-init="desde='{{form.desde.vars.value}}';hasta='{{form.hasta.vars.value}}';escuela='{{form.escuela.vars.value}}';">
                 <div class="input-group" id="datepicker">
-                    <span class="input-group-addon">Fecha</span>
+                    <span class="input-group-addon"><i class="fa fa-calendar"></i></span>
                     {{ form_widget(form.desde) }}
                     <span class="input-group-addon">a</span>
                     {{ form_widget(form.hasta) }}
