--- a/src/Biblioteca/TegBundle/Resources/views/teg/new.html.twig
+++ b/src/Biblioteca/TegBundle/Resources/views/teg/new.html.twig
@@ -3,6 +3,7 @@
 {% block stylesheets %}
     {{ parent() }}
     <link href="{{ asset('css/bootstrap-switch.min.css') }}" type="text/css" rel="stylesheet" />
+    <link href="{{ asset('angular-plugins/ng-tags-input.min.css') }}" type="text/css" rel="stylesheet" />
     
     <link href="{{ asset('css/fileinput.min.css') }}" media="all" rel="stylesheet" type="text/css" />
 
@@ -44,9 +45,11 @@
                         <label>Segundo autor (Opcional): <input type="checkbox" ng-model="segundoA" ng-init="segundoA={% if form.authors[1] is defined %}true{% endif %}" /></label><br/>
                        
                         <li ng-if="segundoA" >
+                            {% if form.authors[1] is defined %}
                             {{ form_widget(form.authors[1].name) }}
                             {{ form_widget(form.authors[1].lastname) }}
                             {{ form_errors(form.authors[1]) }}
+                            {% endif %}
                         </li>
                     </ul>
                 </div>
@@ -64,9 +67,11 @@
                         <label>Segundo tutor (Opcional): <input type="checkbox" ng-model="segundoT" ng-init="segundoT={% if form.tuthors[1] is defined %}true{% endif %}" /></label><br/>
                        
                         <li ng-if="segundoT" >
+                            {% if form.tuthors[1] is defined %}
                             {{ form_widget(form.tuthors[1].name) }}
                             {{ form_widget(form.tuthors[1].lastname) }}
                             {{ form_errors(form.tuthors[1]) }}
+                            {% endif %}
                         </li>
                     </ul>
                 </div>
@@ -85,18 +90,16 @@
                 {{ form_errors(form.keyWords) }}
 
                 <div class="col-xs-9" ng-init="{% for i in form.keyWords %}add('{{ i.vars.value}}');{% endfor %}">
-                    <div ng-repeat="item in wordkeys track by $index" class="input-group col-md-2 col-xs-12" style="float: left;margin-right: 5px;">
-                        <input type="text" name="[['biblioteca_tegbundle_teg[keyWords]['+$index+'][keyWord]']]" value="[[item]]:[[$index]]" required="required" class="form-control"/>
-                        <span class="input-group-btn">
-                            <button type="button" class="close" ng-click="remove($index)"><span aria-hidden="true">&times;</span></button>
-                          </span>
-                    </div>
-                    <div class="form-compacto input-group col-md-2 col-xs-12">
-                        <input placeholder="Nueva palabra..." class="form-control" ng-model="newWordkey" type="text" ng-enter="add(newWordkey)" value="" style="width: initial;"></input>
-                        <span class="input-group-btn">
-                            <button ng-click="add(newWordkey)" class="btn btn-success" type="button"><span class="glyphicon glyphicon-plus-sign"></span></button>
-                        </span>
-                    </div>
+                    
+                    <tags-input ng-model="keywords" display-property="name" placeholder="Add a country" template="tagtemplate"></tags-input>
+                    <script type="text/ng-template" id="tagtemplate">
+                      <div class="tag-template">
+                        <div>
+                          <input type="text" name="[['biblioteca_tegbundle_teg[keyWords]['+$index+'][keyWord]']]" value="[[$getDisplayText()]]" required="required" readonly />
+                          <a class="remove-button" ng-click="$removeTag()">&#10006;</a>
+                        </div>
+                      </div>
+                    </script>
                 </div>
             </div>
             <div class="form-group">
@@ -189,5 +192,6 @@
     <script src="{{ asset('js/fileinput_locale_es.js') }}" type="text/javascript"></script>
 
     <script src="{{ asset('js/tegController.js') }}" type="text/javascript"></script>
+    <script src="{{ asset('angular-plugins/ng-tags-input.min.js') }}" type="text/javascript"></script>
         
 {% endblock %}
