--- a/src/Biblioteca/TegBundle/Resources/views/teg/new.html.twig
+++ b/src/Biblioteca/TegBundle/Resources/views/teg/new.html.twig
@@ -27,12 +27,12 @@
             <div class="form-group">
                 {{ form_label(form.titulo) }}
                 {{ form_errors(form.titulo) }}
-                <div class="col-xs-9">
+                <div class="col-xs-9 col-lg-12">
                     {{ form_widget(form.titulo) }}
                 </div>
             </div>
 
-            <div class="form-group">
+            <div class="form-group col-lg-6">
                 {{ form_label(form.authors) }}
                 <div id="form-autor" class="col-xs-9">
                     <ul id="autor-fields-list" class="list-unstyled" ng-init="{% for i in form.authors %}addA('{{ i.vars.value}}');{% endfor %}">
@@ -42,7 +42,7 @@
                             {{ form_errors(form.authors[0]) }}
                         </li>
 
-                        <label>Segundo autor (Opcional): <input type="checkbox" ng-model="segundoA" ng-init="segundoA={% if form.authors[1] is defined %}true{% endif %}" /></label><br/>
+                        <label>Segundo autor (Opcional): <input type="checkbox" ng-model="segundoA" {% if form.authors[1] is defined %}ng-init="segundoA=true"{% endif %} /></label><br/>
                        
                         <li ng-if="segundoA" >
                             {% if form.authors[1] is defined %}
@@ -54,7 +54,7 @@
                     </ul>
                 </div>
             </div>
-            <div class="form-group">
+            <div class="form-group col-lg-6">
                 {{ form_label(form.tuthors) }}
                 <div id="form-tutor" class="col-xs-9">
 
@@ -64,7 +64,7 @@
                             {{ form_widget(form.tuthors[0].lastname) }}
                             {{ form_errors(form.tuthors[0]) }}
                         </li>
-                        <label>Segundo tutor (Opcional): <input type="checkbox" ng-model="segundoT" ng-init="segundoT={% if form.tuthors[1] is defined %}true{% endif %}" /></label><br/>
+                        <label>Segundo tutor (Opcional): <input type="checkbox" ng-model="segundoT" {% if form.tuthors[1] is defined %}ng-init="segundoT=true"{% endif %} /></label><br/>
                        
                         <li ng-if="segundoT" >
                             {% if form.tuthors[1] is defined %}
@@ -77,7 +77,7 @@
                 </div>
             </div>
 
-            <div class="form-group">
+            <div class="form-group col-lg-6">
                 {{ form_label(form.resumen) }}
                 {{ form_errors(form.resumen) }}
                 <div class="col-xs-9">
@@ -85,36 +85,35 @@
                 </div>
             </div>
             
-            <div class="form-group" >
+            <div class="form-group col-lg-6">
                 {{ form_label(form.keyWords) }}
                 {{ form_errors(form.keyWords) }}
 
                 <div class="col-xs-9" ng-init="{% for i in form.keyWords %}add('{{ i.vars.value}}');{% endfor %}">
-                    
-                    <tags-input ng-model="keywords" display-property="name" placeholder="Add a country" template="tagtemplate"></tags-input>
+                    <tags-input ng-model="keyWords" display-property="name" placeholder="Agregar palabra" template="tagtemplate" add-on-blur="false" min-tags="3" max-tags="15" enable-editing-last-tag="true" replace-spaces-with-dashes="false" max-length="30"></tags-input>
                     <script type="text/ng-template" id="tagtemplate">
                       <div class="tag-template">
                         <div>
-                          <input type="text" name="[['biblioteca_tegbundle_teg[keyWords]['+$index+'][keyWord]']]" value="[[$getDisplayText()]]" required="required" readonly />
+                          <input type="text" name="[['biblioteca_tegbundle_teg[keyWords]['+$index+'][keyWord]']]" value="[[$getDisplayText()]]" required="required" readonly style="line-height: initial;  background: rgba(255, 255, 255, 0);border: none;width: [[$getDisplayText().length * 8]]px;"/>
                           <a class="remove-button" ng-click="$removeTag()">&#10006;</a>
                         </div>
                       </div>
                     </script>
                 </div>
             </div>
-            <div class="form-group">
+            <div class="form-group col-lg-6">
                 {{ form_label(form.publicacion) }}
                 {{ form_errors(form.publicacion) }}
                 
                 {% for Field in form.publicacion %}
-                    <div class="col-md-2 col-xs-3" ng-init="{{Field.vars.id}}='{{Field.vars.value}}';">
+                    <div class="col-md-2 col-xs-3 col-lg-3" ng-init="{{Field.vars.id}}='{{Field.vars.value}}';">
                         {{ form_errors(Field) }}
                         {{ form_widget(Field, { 'attr': {'class': 'form-control form-compacto', 'ng-model':(Field.vars.id)} }) }}
                     </div>
                 {% endfor %}
             </div>
 
-            <div class="form-group">
+            <div class="form-group col-lg-6">
                 {{ form_label(form.escuela) }}
                 {{ form_errors(form.escuela) }}
                 <div class="col-xs-9" ng-init="{{form.escuela.vars.id}}='{{form.escuela.vars.value}}';">
