Restructuración de Archivos js, css, angularApp
además parte de validación newTegController.js

--- a/src/Biblioteca/TegBundle/Resources/views/teg/show.html.twig
+++ b/src/Biblioteca/TegBundle/Resources/views/teg/show.html.twig
@@ -94,6 +94,7 @@
 {% block javascripts %}
     {{ parent() }}
 
-    <script src="{{ asset('js/tegController.js') }}" type="text/javascript"></script>
+    <script src="{{ asset('js/app/showTeg/showTegModule.js') }}" type="text/javascript"></script>
+    <script src="{{ asset('js/app/showTeg/showTegController.js') }}" type="text/javascript"></script>
 
 {% endblock %}
