--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -9,38 +9,42 @@
     {% set isUser = app.user.roles[0]=="ROLE_USER" %}
 {% endif %}
 {# Fin de Verificacion #}
-
 <!DOCTYPE html>
 <html>
 	<head>
 		<meta charset="UTF-8" />
 		<title>{% block title %}Bienvenido!{% endblock %}</title>
 		{% block stylesheets %}
-			
-			<link href="{{ asset('css/font-awesome.min.css') }}" type="text/css" rel="stylesheet" />
-			
-			<link href="{{ asset('css/bootstrap.min.css') }}" type="text/css" rel="stylesheet" />
-			
-			<link href="{{ asset('angular-plugins/loading-bar.min.css') }}" type="text/css" rel="stylesheet" />
-			<link href="{{ asset('css/style.css') }}" type="text/css" rel="stylesheet" />
-			<link rel="icon" type="image/x-icon" href="{{ asset('/img/favicon2.ico') }}" />
-	  {% endblock %}  
+			<script type='text/javascript'>
+			window.onload = detectarCarga;
+			function detectarCarga(){
+			document.getElementById("imgLOAD").style.display="none";
+			}
+			</script>
+			<link href="{{ asset('css/font-awesome.min.css') }}" type="text/css" rel="stylesheet"/>
+			<link href="{{ asset('css/bootstrap.min.css') }}" type="text/css" rel="stylesheet"/>
+			<link href="{{ asset('plugins/angular-loading-bar/loading-bar.min.css') }}" type="text/css" rel="stylesheet" />
+			<link href="{{ asset('css/style.css') }}" type="text/css" rel="stylesheet"/>
+			<link rel="icon" type="image/x-icon" href="{{ asset('/img/favicon2.ico') }}"/>
+	  	{% endblock %}  
 		
 		
 	</head>
-	<body ng-app="tegApp" ng-controller="LoadCtrl">
+	<body nxg-app="tegApp" ng-controller="LoadCtrl">
+		
 		{% block menubackend %}
 			{% include 'BibliotecaUserBundle::menu_backend.html.twig' %}
 		{% endblock menubackend%}
 		<div id="body" class="container">
-			
+		<h3 id="imgLOAD">Cargando...</h3>	
 			{% block body %}
 			{% endblock %}
 		</div>
 		{% block javascripts %}
+
 			<script src="{{ asset('js/angular.min.js') }}"></script>
-			<script src="{{ asset('angular-plugins/loading-bar.min.js') }}"></script>
-			<script src="{{ asset('js/app.js') }}"></script>		
+			<script src="{{ asset('plugins/angular-loading-bar/loading-bar.min.js') }}"></script>
+			<!--script src="{# { asset('js/app.js') } #}"></script-->		
 			<script src="{{ asset('js/jquery/1.11.3/jquery.min.js') }}"></script>
 			<script src="{{ asset('js/bootstrap.min.js')}}"></script>
 			
