--- a/src/Biblioteca/TegBundle/Resources/views/teg/index.html.twig
+++ b/src/Biblioteca/TegBundle/Resources/views/teg/index.html.twig
@@ -70,5 +70,6 @@
     {% endblock %}
 {% block javascripts %}
     {{ parent() }}
-    <script src="{{ asset('js/tegController.js') }}" type="text/javascript"></script>
+    <script src="{{ asset('js/app/searchTeg/searchTegModule.js') }}" type="text/javascript"></script>
+    <script src="{{ asset('js/app/searchTeg/searchTegController.js') }}" type="text/javascript"></script>
 {% endblock %}
