--- a/src/Biblioteca/TegBundle/Resources/views/teg/new.html.twig
+++ b/src/Biblioteca/TegBundle/Resources/views/teg/new.html.twig
@@ -2,8 +2,8 @@
 
 {% block stylesheets %}
     {{ parent() }}
-    <link href="{{ asset('css/bootstrap-switch.min.css') }}" type="text/css" rel="stylesheet" />
-    <link href="{{ asset('angular-plugins/ng-tags-input.min.css') }}" type="text/css" rel="stylesheet" />
+    <link href="{{ asset('plugins/bootstrap-switch/bootstrap-switch.min.css') }}" type="text/css" rel="stylesheet" />
+    <link href="{{ asset('plugins/ngTagsInput/ng-tags-input.min.css') }}" type="text/css" rel="stylesheet" />
     
     <link href="{{ asset('css/fileinput.min.css') }}" media="all" rel="stylesheet" type="text/css" />
 
@@ -11,7 +11,8 @@
 
 {% block body %}
 
-    <div ng-controller="inputTegController as ctrl">
+    <div ng-controller="newTegController">
+
         <h1>Nuevo Trabajo Especial de Grado</h1>
         {{ form_start(form, { 'name': 'formInputTeg' }) }}
 
@@ -29,6 +30,39 @@
                 {{ form_errors(form.titulo) }}
                 <div class="col-xs-9 col-lg-12">
                     {{ form_widget(form.titulo) }}
+
+<div >
+    <div class='form-group'>
+            <label for="name">Name</label>
+            <input type="text" class='form-control' placeholder='name' 
+            name='name' data-ng-model='formData.name' required 
+            data-ng-class='{ error: formInputTeg.name.$invalid && !formInputTeg.$pristine }'>
+            <span data-ng-show="!formInputTeg.$pristine && formInputTeg.name.$error.required">Name is required.</span>
+          </div>
+          
+          <div class='form-group'>
+            <label for="lastname">Last Name</label>
+            <input type="text" class='form-control' placeholder='last name' 
+            name='lastname' data-ng-model='formData.lastname' required
+            data-ng-class='{ error: formInputTeg.lastname.$invalid && !formInputTeg.$pristine }'>
+            <span data-ng-show='!formInputTeg.$pristine && formInputTeg.lastname.$error.required'>Last name is required</span>
+          </div>
+          
+          <div class='form-group'>
+            <label for="email">Email</label>
+            <input type="email" class='form-control' placeholder='example@email.com' 
+            name='email' data-ng-model='formData.email' required
+            data-ng-class='{ error: formInputTeg.email.$invalid && !formInputTeg.$pristine, warning: formInputTeg.email.$error.email }'>
+            <span data-ng-show='!formInputTeg.$pristine && formInputTeg.email.$error.required'>Email is required</span>
+            <span data-ng-show='!formInputTeg.$pristine && formInputTeg.email.$error.email'>Please enter a valid email</span>
+          </div>
+          
+          <input type="submit" class='btn btn-success pull-right' 
+          data-ng-click='submitForm(formData)' data-ng-disabled='!formInputTeg.$valid'>
+        <br>
+        Form content:
+        [[formData]]
+      </div> 
                 </div>
             </div>
 
@@ -190,13 +224,14 @@
 {% block javascripts %}
     {{ parent() }}
     
-    <script src="{{ asset('js/bootstrap-switch.min.js') }}" type="text/javascript"></script>
+    <script src="{{ asset('plugins/bootstrap-switch/bootstrap-switch.min.js') }}" type="text/javascript"></script>
     <script type="text/javascript">$("[name='biblioteca_tegbundle_teg[published]']").bootstrapSwitch();</script>
    
     <script src="{{ asset('js/fileinput.js') }}" type="text/javascript"></script>
     <script src="{{ asset('js/fileinput_locale_es.js') }}" type="text/javascript"></script>
 
-    <script src="{{ asset('js/tegController.js') }}" type="text/javascript"></script>
-    <script src="{{ asset('angular-plugins/ng-tags-input.min.js') }}" type="text/javascript"></script>
+    <script src="{{ asset('js/app/newTeg/newtegModule.js') }}" type="text/javascript"></script>
+    <script src="{{ asset('js/app/newTeg/newtegController.js') }}" type="text/javascript"></script>
+    <script src="{{ asset('plugins/ngTagsInput/ng-tags-input.min.js') }}" type="text/javascript"></script>
         
 {% endblock %}
